--- a/SpringBoot/MySpringbootLab/src/main/resources/application-test.properties
+++ b/SpringBoot/MySpringbootLab/src/main/resources/application-test.properties
@@ -7,3 +7,13 @@
 
 
 logging.level.com.rookies3.myspringbootlab=DEBUG
+
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/spring_db
+spring.datasource.username=spring
+spring.datasource.password=spring
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
