--- a/SpringBoot/MySpringbootLab/src/main/resources/application.properties
+++ b/SpringBoot/MySpringbootLab/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 spring.application.name=MySpringbootLab
 
-spring.profiles.active=prod
+spring.profiles.active=test
 
 
 myprop.username=springboot
 myprop.port=${random.int(1,100}
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/spring_db
+spring.datasource.username=spring
+spring.datasource.password=spring
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
